python-easyocr: update repo_deps

--- a/archlinuxcn/python-easyocr/lilac.yaml
+++ b/archlinuxcn/python-easyocr/lilac.yaml
@@ -4,8 +4,15 @@ maintainers:
 build_prefix: extra-x86_64
 
 repo_depends:
+  - brunsli
+  - charls
   - python-bidi
+  - python-imagecodecs
+  - python-imageio
+  - python-imread
+  - python-pywavelets
   - python-scikit-image
+  - python-tifffile
   - python-torchvision
 
 update_on:
