[wine-valve] Fix build

--- a/archlinuxcn/wine-valve/PKGBUILD
+++ b/archlinuxcn/wine-valve/PKGBUILD
@@ -7,8 +7,8 @@
 # Contributor: heavysink <winstonwu91 at gmail>
 pkgname=wine-valve
 epoch=3
-pkgver=7.0.1b
-_pkgver='7.0-1b'
+pkgver=7.0.2
+_pkgver='7.0-2'
 pkgrel=1
 pkgdesc='A compatibility layer for running Windows programs (Valve version)'
 arch=('i686' 'x86_64')
@@ -87,7 +87,8 @@ install="$pkgname.install"
 source=("https://github.com/ValveSoftware/wine/archive/proton-wine-${_pkgver}.tar.gz"
         '30-win32-aliases.conf'
         'wine-binfmt.conf'
-        'futex.patch')
+        'futex.patch'
+        'libldap.patch')
 
 if [ "$CARCH" = 'i686' ] 
 then
@@ -111,6 +112,7 @@ prepare() {
     # fix path of opencl headers
     sed 's|OpenCL/opencl.h|CL/opencl.h|g' -i configure*
     patch -p1 < ../futex.patch
+    patch -p1 < ../libldap.patch
     ./dlls/winevulkan/make_vulkan
 }
 
@@ -211,7 +213,8 @@ package() {
     done
 }
 
-sha256sums=('acd7309614bb107a4f9da4ac08ee1b11ce67c2dff117b1820cff168e2ce65606'
+sha256sums=('c4185d7dc3f3882238fa0410760aa26ce6eb17db01dd25b9486ab8b569c428af'
             '9901a5ee619f24662b241672a7358364617227937d5f6d3126f70528ee5111e7'
             '6dfdefec305024ca11f35ad7536565f5551f09119dda2028f194aee8f77077a4'
-            '7c73a0fd35d8905d5d0fc33f5cf1558f77b4d70e544c92034ffe41a9d50d8c40')
+            '7c73a0fd35d8905d5d0fc33f5cf1558f77b4d70e544c92034ffe41a9d50d8c40'
+            'ade8e214eb0486698423d8eb213859b458383cde2afd4d45fd60bdbcca652a72')
