--- a/archlinuxcn/proton/lilac.yaml
+++ b/archlinuxcn/proton/lilac.yaml
@@ -10,6 +10,8 @@ pre_build_script: aur_pre_build(maintainers=['loathingkernel'])
 
 post_build: aur_post_build
 
+time_limit_hours: 4
+
 repo_depends:
   - lib32-lzo
   - mingw-w64-tools
