fix build: iptables-fullconenat

--- a/archlinuxcn/iptables-fullconenat/PKGBUILD
+++ b/archlinuxcn/iptables-fullconenat/PKGBUILD
@@ -3,8 +3,8 @@
 _pkgbase=iptables
 pkgbase=iptables-fullconenat
 pkgname=(iptables-fullconenat iptables-fullconenat-nft)
-pkgver=1.8.7
-pkgrel=3
+pkgver=1.8.8
+pkgrel=1
 epoch=1
 pkgdesc='Linux kernel packet control tool with FULLCONENAT support.'
 arch=(x86_64)
@@ -20,9 +20,10 @@ backup=(etc/ethertypes etc/iptables/{ip,ip6}tables.rules)
 source=(https://www.netfilter.org/projects/iptables/files/$_pkgbase-$pkgver.tar.bz2{,.sig}
         empty.rules simple_firewall.rules empty-{filter,mangle,nat,raw,security}.rules
         {arp,eb,ip,ip6}tables.service iptables-{legacy,nft}-flush
+        "iptables-format-security.patch::https://git.netfilter.org/iptables/patch/?id=b72eb12e"
         "libipt_FULLCONENAT.c::https://raw.githubusercontent.com/llccd/netfilter-full-cone-nat/dev/libipt_FULLCONENAT.c"
         "libip6t_FULLCONENAT.c::https://raw.githubusercontent.com/llccd/netfilter-full-cone-nat/dev/libip6t_FULLCONENAT.c")
-sha1sums=('05ef75415cb7cb7641f51d51e74f3ea29cc31ab1'
+sha1sums=('98783621a5e58ff55f83b1350523f3de41af621d'
           'SKIP'
           '83b3363878e3660ce23b2ad325b53cbd6c796ecf'
           'f085a71f467e4d7cb2cf094d9369b0bcc4bab6ec'
@@ -37,9 +38,11 @@ sha1sums=('05ef75415cb7cb7641f51d51e74f3ea29cc31ab1'
           '9cec592787e32451f58fa608ea057870e07aa704'
           'd10af7780d1634778d898c709e2d950aa1561856'
           '15c1684f3e671f4d0ede639a7c9c08e1a841511c'
+          'df4b0a31dfa01cff65926d439ab1475f246d4e74'
           '4a4f5ebc8e30c573f9c3220b8135e3101f8da18c'
           '878a1e0a306f274b285a26d3d4a3f2072caa31e3')
-validpgpkeys=('37D964ACC04981C75500FB9BD55D978A8A1420E4') # Netfilter Core Team
+validpgpkeys=('C09DB2063F1D7034BA6152ADAB4655A126D292E4'
+              '37D964ACC04981C75500FB9BD55D978A8A1420E4') # Netfilter Core Team
 
 prepare() {
   mkdir build
@@ -48,6 +51,9 @@ prepare() {
   cp ../libip{,6}t_FULLCONENAT.c extensions/
   # use system one
   rm include/linux/types.h
+
+  ln -rs libiptc/linux_list.h include/libiptc
+  patch -p1 -i ../iptables-format-security.patch # Fix build with -Werror=format-security
 }
 
 build() {
