--- a/archlinuxcn/python-apex-git/lilac.yaml
+++ b/archlinuxcn/python-apex-git/lilac.yaml
@@ -3,6 +3,10 @@ maintainers:
 
 build_prefix: extra-x86_64
 
+repo_depends:
+  - gcc10
+  - gcc10: gcc10-libs
+
 update_on:
   - source: github
     github: NVIDIA/apex
