--- a/archlinuxcn/python-onnxoptimizer/lilac.yaml
+++ b/archlinuxcn/python-onnxoptimizer/lilac.yaml
@@ -6,7 +6,7 @@ build_prefix: extra-x86_64
 repo_depends:
   - python-onnx
   - python-onnxruntime
-  # - python-torchvision
+  - python-torchvision
 
 pre_build_script: |
     update_pkgver_and_pkgrel(_G.newver)
