--- a/archlinuxcn/zotero-bin/lilac.yaml
+++ b/archlinuxcn/zotero-bin/lilac.yaml
@@ -3,6 +3,6 @@ maintainers:
 build_prefix: extra-x86_64
 update_on:
   - source: aur
-    aur: zotero
+    aur: zotero-bin
 pre_build: aur_pre_build
 post_build: aur_post_build
