[julia-git-lerc_jll-git] add dependency

--- a/archlinuxcn/julia-git-lerc_jll-git/PKGBUILD
+++ b/archlinuxcn/julia-git-lerc_jll-git/PKGBUILD
@@ -6,7 +6,7 @@ url="https://github.com/JuliaBinaryWrappers/LERC_jll.jl"
 arch=('any')
 license=('MIT')
 makedepends=(git julia-pkg-scripts)
-depends=(julia-git)
+depends=(julia-git lerc)
 provides=(julia-git-lerc_jll)
 source=(git+https://github.com/JuliaBinaryWrappers/LERC_jll.jl
         jll.toml)
