--- a/archlinuxcn/python-scenedetect/lilac.yaml
+++ b/archlinuxcn/python-scenedetect/lilac.yaml
@@ -4,9 +4,8 @@ maintainers:
 build_prefix: extra-x86_64
 
 update_on:
-  - source: github
-    github: Breakthrough/PySceneDetect
-    use_latest_release: true
+  - source: pypi
+    pypi: scenedetect
   - source: manual
     manual: 1
   - alias: python
