uptime-kuma: fix arch
Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/archlinuxcn/uptime-kuma/PKGBUILD
+++ b/archlinuxcn/uptime-kuma/PKGBUILD
@@ -2,9 +2,9 @@
 
 pkgname=uptime-kuma
 pkgver=1.16.1
-pkgrel=4
+pkgrel=5
 pkgdesc="A free and open source uptime monitoring solution"
-arch=('any')
+arch=('x86_64')
 url="https://github.com/louislam/uptime-kuma"
 license=('MIT')
 depends=('nodejs')
