--- a/alarmcn/uptime-kuma/PKGBUILD
+++ b/alarmcn/uptime-kuma/PKGBUILD
@@ -2,9 +2,9 @@
 
 pkgname=uptime-kuma
 pkgver=1.16.1
-pkgrel=3
+pkgrel=4
 pkgdesc="A free and open source uptime monitoring solution"
-arch=('any')
+arch=('aarch64' 'armv7h')
 url="https://github.com/louislam/uptime-kuma"
 license=('MIT')
 depends=('nodejs')
