[llvm-julia] disable tests

--- a/alarmcn/llvm-julia/PKGBUILD
+++ b/alarmcn/llvm-julia/PKGBUILD
@@ -119,7 +119,7 @@ build() {
         -DLLVM_INSTALL_UTILS=ON \
         -DLLVM_ENABLE_RTTI=ON \
         -DLLVM_ENABLE_FFI=ON \
-        -DLLVM_BUILD_TESTS=ON \
+        -DLLVM_BUILD_TESTS=OFF \
         -DLLVM_BUILD_DOCS=ON \
         -DLLVM_ENABLE_SPHINX=ON \
         -DLLVM_ENABLE_DOXYGEN=OFF \
