--- a/alarmcn/lief/PKGBUILD
+++ b/alarmcn/lief/PKGBUILD
@@ -4,7 +4,7 @@ pkgname=lief
 pkgver=0.12.1
 pkgrel=1
 pkgdesc='Library to instrument executable formats'
-arch=(x86_64)
+arch=(armv7h aarch64 x86_64)
 url='https://lief.quarkslab.com/'
 license=(apache)
 makedepends=(git cmake python python-setuptools)
